WIP Server/desktop install setup
Also
- pacman-keys - refresh database after
- Fix hostname setup in chroot (hostenamectl won't work in chroot)
- Fix initramfs setup (didn't have lvm2 in packages, sd-lvm2 no longer exists)
- Fix home config setup (before it dependend on itself having already run...)
- Fix ranger devicons setup
- Fix QMK setup (need to clone my repo)
- Connman setup can't be done in chroot, move to after
- Maybe fix nvidia-dkms installation (should be installed before anything else
  that depends on nvidia or nvidia-dkms or the normal nvidia package will be
  installed)
- Add way to install packages on only server or laptop
- Fix restow to work when dot directories don't exist on current machine
- Allow connecting to local network even when on vpn
- Don't start zsh in .profile (TRAMP issues and wasn't a good idea in the first
  place)
- Enable sshd on server with ufw firewall rules

LLM stuff
- Set up ollama and koboldcpp (tried and failed to setup aphrodite, exllamav2,
  or vllm with amd)
- Add script to pull models from hugging face
- Partial open webui setup (will include docker-compose file later once tweak)

--- a/root/boot/refind_linux.conf
+++ b/root/boot/refind_linux.conf
@@ -2,7 +2,7 @@
 # I normally boot from the manually defined entry in refind.conf instead but am keeping
 # this as backup (has worked in some cases where the refind.conf entry did not)
 # refind-install will generate this file if it does not exists; otherwise it will not overwrite it
-"Boot with standard options"  "cryptdevice=LABEL=prolinux:prolinux:allow-discards resume=/dev/prolinux_group/swap root=/dev/prolinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash"
-"Boot to single-user mode"    "cryptdevice=LABEL=prolinux:prolinux:allow-discards resume=/dev/prolinux_group/swap root=/dev/prolinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash single"
+"Boot with standard options"  "cryptdevice=LABEL=prolinux:prolinux:allow-discards resume=/dev/prolinux_group/swap root=/dev/prolinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet nosplash"
+"Boot to single-user mode"    "cryptdevice=LABEL=prolinux:prolinux:allow-discards resume=/dev/prolinux_group/swap root=/dev/prolinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet nosplash single"
 "(OLD) Boot with standard options"  "cryptdevice=LABEL=cryptlinux:cryptlinux:allow-discards resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash"
 "(OLD) Boot to single-user mode"    "cryptdevice=LABEL=cryptlinux:cryptlinux:allow-discards resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash single"
