--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -15,6 +15,8 @@
 # uses for setlocal?
 
 # * Settings
+default_linemode devicons
+
 set column_ratios 1,3,5
 set dirname_in_tabs true
 # no clickable padding when no preview
