--- a/root/etc/mkinitcpio-custom-systemd.conf
+++ b/root/etc/mkinitcpio-custom-systemd.conf
@@ -21,7 +21,7 @@ FILES=()
 # - sd-encrypt can unlock multiple devices (so lvm can span multiple disks) but
 #   that currently requires specifying a UUID
 # - sd-colors from https://github.com/EvanPurkhiser/mkinitcpio-colors
-HOOKS=(base systemd sd-colors keyboard autodetect sd-vconsole modconf block sd-encrypt sd-lvm2 filesystems fsck)
+HOOKS=(base systemd sd-colors keyboard autodetect sd-vconsole modconf block sd-encrypt lvm2 filesystems fsck)
 
 # faster decompression
 COMPRESSION="lz4"
