Mat2 - Add mat2 keybindings and update packages

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -87,8 +87,11 @@ map cw shell -sf walset --zoom %f
 # change rotation; image rotate with imagemagick
 map cr shell mogrify -rotate 90 %f
 map cR shell mogrify -rotate 270 %f
-# flop (mirror image) to new name
-map cm shell convert -flop %f flopped_%f
+# flop to new name
+map cf shell convert -flop %f flopped_%f
+
+# create new file without metadata
+map cm shell mat2 %f
 
 # make a 100x100 thumbnail (ranger_functions)
 map cs shell make_thumbnail %f
