Add Wayland config
- Add hyprland, hyprsunset, hypridle, hyprlock, swww, etc.
- Add waybar config
- Add mako config
- Use spotify-launcher from main repos (doesn't use xwayland)
- Add spicetify
- Add new pywal color templates (discord for vesktop, hyprland, spicetify, mako, sway, etc.)
- Update mpgo key in tridactyl to copy to clipboard first
- Was having issues with outshine, switch to outli

Not adding Niri or scroll (sway) configs as they are incomplete (primarily testing hyprland).

Also
- Add yazi config and switch to from ranger
- Yazi won't automatically pass all images like I have ranger set up to do, so I've added playlistmanager script to mvi as well
- I almost never use dnscrypt-proxy and don't have a working configuration; just use quad9 with DoT when using unbound

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "refind-catppuccin"]
 	path = root/boot/efi/EFI/refind/themes/catppuccin
 	url = https://github.com/catppuccin/refind
+[submodule "mpv-playlistmanager"]
+	path = media/.config/mvi/repos/mpv-playlistmanager
+	url = https://github.com/jonniek/mpv-playlistmanager
