--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -17,7 +17,7 @@ ext x?html?, has firefox, X, flag f = firefox "$@"
 ext x?html?, has w3m, terminal = w3m "$@"
 
 # open text file storing gallery url as gallery in mpv/mvi
-file, has mvigallery, name gallery(-dl-url)?$ = tdrop -a auto_hide && mvigallery "$@" ./ && tdrop -a auto_show
+file, has mvigallery, name gallery(-dl-url)?$ = auto_hide && mvigallery "$@" ./ && tdrop -a auto_show
 
 # define the "editor" for text files as first action
 mime ^text, label editor = $EDITOR "$@"
@@ -28,7 +28,7 @@ ext 1, label pager = man "$1"
 mime ^text, label pager = "$PAGER" "$@"
 
 # audio and video
-mime ^video|audio|ogg$, has mpv, X, flag f = tdrop -a auto_hide && mvp --loop=inf "$@" && tdrop -a auto_show
+mime ^video|audio|ogg$, has mpv, X, flag f = auto_hide && mvp --loop=inf "$@" && tdrop -a auto_show
 
 # video in framebuffer
 mime ^video, terminal, !X, has vlc = vlc "$@"
@@ -37,13 +37,13 @@ mime ^video, terminal, !X, has vlc = vlc "$@"
 # mime ^image/svg, has inkscape, X, flag f = inkscape "$@"
 mime ^image/svg, has display, X, flag f = display "$@"
 
-mime ^image, has mvi, X, flag f = tdrop -a auto_hide && mvi "$@" && tdrop -a auto_show
-mime ^image, has pqiv, X, flag f = tdrop -a auto_hide && pqiv "$@" && tdrop -a auto_show
+mime ^image, has mvi, X, flag f = auto_hide && mvi "$@" && tdrop -a auto_show
+mime ^image, has pqiv, X, flag f = auto_hide && pqiv "$@" && tdrop -a auto_show
 
 ext xcf, X, flag f = gimp "$@"
 
 # pdf
-ext pdf|djvu|epub, has zathura, X, flag f = tdrop -a auto_hide && zathura "$@" && tdrop -a auto_show
+ext pdf|djvu|epub, has zathura, X, flag f = auto_hide && zathura "$@" && tdrop -a auto_show
 # ext pdf, has apvlv, X, flag f = apvlv "$@"
 
 # word
@@ -54,8 +54,8 @@ ext exe = wine "$1"
 # needs higher precedence than archives
 ext jar, flag f = java -jar "$1"
 # TODO can detect that an archive contains images?
-ext cbz|cbr|zip, has mvi, flag f = tdrop -a auto_hide && mvi "$1" && tdrop -a auto_show
-ext cbz|cbr|zip, has pqiv, flag f = tdrop -a auto_hide && pqiv -n "$1" && tdrop -a auto_show
+ext cbz|cbr|zip, has mvi, flag f = auto_hide && mvi "$1" && tdrop -a auto_show
+ext cbz|cbr|zip, has pqiv, flag f = auto_hide && pqiv -n "$1" && tdrop -a auto_show
 
 # show archive contents
 ext 7z|ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz, has atool = atool -l "$@" | "$PAGER"
