--- a/root/etc/unbound/unbound.conf
+++ b/root/etc/unbound/unbound.conf
@@ -17,15 +17,31 @@ server:
   # instead, automatically update (see warning in unbound-anchor manpage)
   # directory must be writable by unbound user; see unbound.conf manpage
   # also https://wiki.archlinux.org/index.php/unbound#Automatic_updates
-  auto-trust-anchor-file: "trusted-key.key"
   # also see /etc/systemd/system/unbound.service.d/override.conf
+  auto-trust-anchor-file: "trusted-key.key"
+  # for DoT
+  tls-system-cert: yes
 
 # https://github.com/jedisct1/dnscrypt-proxy
+# forward-zone:
+#   name: "."
+#   # unbound is using port 53, so dnscrypt needs to use a different port
+#   forward-addr: ::1@53000
+#   forward-addr: 127.0.0.1@53000
+
 forward-zone:
   name: "."
-  # unbound is using port 53, so dnscrypt needs to use a different port
-  forward-addr: ::1@53000
-  forward-addr: 127.0.0.1@53000
+  forward-tls-upstream: yes
+  # Quad9
+  forward-addr: 2620:fe::fe@853#dns.quad9.net
+  forward-addr: 9.9.9.9@853#dns.quad9.net
+  forward-addr: 2620:fe::9@853#dns.quad9.net
+  forward-addr: 149.112.112.112@853#dns.quad9.net
+  # # Cloudflare DNS
+  # forward-addr: 2606:4700:4700::1111@853#cloudflare-dns.com
+  # forward-addr: 1.1.1.1@853#cloudflare-dns.com
+  # forward-addr: 2606:4700:4700::1001@853#cloudflare-dns.com
+  # forward-addr: 1.0.0.1@853#cloudflare-dns.com
 
 # all old issues are gone; maybe try wayback
 # https://github.com/jedisct1/dnscrypt-proxy/issues/19
